--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ APP_ENV=dev
 APP_SECRET=change-this-secret-in-production-please
 
 # Base de données
-DATABASE_URL="postgresql://catalog:password@db:5432/catalog?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://catalog:catalog_password@db:5432/product_catalog?serverVersion=15&charset=utf8"
 
 # Logging (Symfony 7.3)
 MONOLOG_DEPRECATION_CHANNEL=deprecation
